# omnivious-voice-studio

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  model_eval_results.json  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/app/: cleanup.py  config.py  database.py  ingest.py  jobs.py  local_reasoner.py  main.py  models.py  persona_service.py  preprocess_rules.py  schemas.py  speaker_identity.py  style_compiler.py  tts_service.py
apps/api/app/tts/backends/: __init__.py  base.py  chatterbox_turbo_engine.py
apps/api/scripts/: repair_mlx_audio_metadata.sh
apps/api/tests/: test_identity_quality_policy.py  test_jobs.py  test_local_reasoner.py  test_model_alias.py  test_style_compiler.py  test_tts_service.py
apps/web/: next.config.mjs  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts  types.ts
benchmarks/: benchmark_config.example.json
docs/: Omnivious-NonTechnical-Fun-Edition.md  Omnivious-Technical-Requirements.md  README.md  how-to-use-omnivious.md  omnivious-nontechnical-fun-edition.md  omnivious-prd.md  omnivious-technical-requirements.md  omnivious-trd.md
reports/: benchmark_runbook.md  voice_cloning_shortlist_feb2026.md
scripts/: build_voice_model_shortlist.py  run_voice_benchmark.py  smoke_v3_recovery.py
scripts/runners/: chatterbox_runner.py  dia_runner.py  qwen3_tts_runner.py
